fix button spacing & behavior

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -111,7 +111,7 @@ h1 {
 }
 
 .btn-spacer {
-	margin: 50px 0 0 20px;
+	margin: 50px 0 0 10px;
 }
 
 .delete-btn {
